--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 				</div>
 			</div>
 		</section>
-		<section class="schedule">
+		
+		<div class="schedule">
 			<div class="container">
 				<div class="schedule-inner">
 					<div class="row">
@@ -163,7 +164,7 @@
 										<i class="fa fa-ambulance"></i>
 									</div>
 									<div class="single-content">
-										<span>Emegency Cases</span>
+										<span>Emergency Cases</span>
 										<h4>+91 8939961967</h4>
 										<p>Get All time support for emergency. We have introduced the principle of family medicine. Get Conneted with us for any urgency.</p>
 									</div>
@@ -206,7 +207,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<section class="why-choose section" id="aboutsaamiscan">
 			<div class="container">				
 				<div class="row">
