google reviews added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="css/responsive.css">		
+        <link rel="stylesheet" href="css/responsive.css">	
+		<link rel="stylesheet" href="styles.css">	
     </head>
     <body>
 		<ul class="pro-features">
@@ -428,7 +429,7 @@
 					</div>
 				</div>	
 			</div>	
-		</section>	
+		</section>				
 		<section class="appointment" id="appointment">
 			<div class="container">
 				<div class="row">
@@ -485,6 +486,53 @@
 						<div class="appointment-image">
 							<img src="img/contact-img.jpg" alt="#">
 						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="reviews-container">
+				<div class="reviews-header">
+					<h2>Excellent</h2>
+					<div class="stars">
+						★★★★★
+					</div>
+					<p>Based on <strong>Customer Reviews</strong></p>
+					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
+				</div>
+				<div class="review-cards">
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">S</div>
+							<div class="name-date">
+								<p><strong>sathya nambi</strong></p>
+								<p>09/02/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>Service is nice for ultrasound abdomen scan</p>
+					</div>
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">M</div>
+							<div class="name-date">
+								<p><strong>Maha Jega</strong></p>
+								<p>09/02/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>MRI Cervical scan done and report given on time, nice experience</p>
+					</div>
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">J</div>
+							<div class="name-date">
+								<p><strong>Joshua Josh</strong></p>
+								<p>07/02/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>Fibro scan done staffs coordinated well very caring and friendly, I will refer others to this centre</p>
 					</div>
 				</div>
 			</div>
