update google review

--- a/index.html
+++ b/index.html
@@ -456,12 +456,12 @@
 							<div class="row">
 								<div class="col-lg-5 col-md-4 col-12">
 									<div class="form-group">
-										<div class="button">
+										<div style="margin-left: 20px;" class="button">
 											<button type="submit" class="btn">Book An Appointment</button>
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-7 col-md-8 col-12">
+								<div style="margin-left: 20px;" class="col-lg-7 col-md-8 col-12">
 									<p>( We will be confirm by an Text Message )</p>
 								</div>
 							</div>
@@ -483,7 +483,7 @@
 					<div class="stars">
 						★★★★★
 					</div>
-					<p>Based on <strong>Customer Reviews</strong></p>
+					<p>Based on <strong>2713 reviews</strong></p>
 					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
 				</div>
 				<div class="review-cards">
