--- a/index.html
+++ b/index.html
@@ -264,35 +264,35 @@
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-listening"></i>
+							<i class="icofont icofont-icu"></i>
 							<h4><a href="gallery.html">CT Scan</a></h4>
 							<p>Computed Tomography (CT) can be used to help diagnose, and plan the treatment, for a range of medical conditions. </p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-heart-alt"></i>
+							<i class="icofont icofont-operation-theater"></i>
 							<h4><a href="gallery.html">Ultra Sound</a></h4>
 							<p>Ultrasound scanning involves exposing part of the body to high-frequency sound waves to produce pictures of the inside of the body.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-heart-beat"></i>
+							<i class="icofont icofont-nurse"></i>
 							<h4><a href="gallery.html">Color Doppler</a></h4>
 							<p>It is a medical imaging technique which is used to provide visualization of the bloodflow can clearly see what is happening inside.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-eye-alt"></i>
+							<i class="icofont icofont-xray"></i>
 							<h4><a href="gallery.html">X-Ray</a></h4>
 							<p>An X-ray picture is really a picture of the shadows cast by the denser materials (like bones) in your body.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-blood"></i>
+							<i class="icofont icofont-dna-alt-2"></i>
 							<h4><a href="gallery.html">Lab Services</a></h4>
 							<p>Outpatient surgery may occur in an inpatient facility, in a self-contained unit within a hospital, in a freestanding self-contained unit.</p>	
 						</div>
@@ -357,7 +357,7 @@
 						<div class="single-table">
 							<div class="table-head">
 								<div class="icon">
-									<i class="icofont icofont-prescription"></i>
+									<i class="icofont icofont-icu"></i>
 								</div>
 								<h4 class="title">32 Slice CT Scan</h4>
 							</div>
@@ -377,7 +377,7 @@
 						<div class="single-table">
 							<div class="table-head">
 								<div class="icon">
-									<i class="icofont icofont-listening"></i>
+									<i class="icofont icofont-operation-theater"></i>
 								</div>
 								<h4 class="title">Ultrasound</h4>
 							</div>
@@ -397,7 +397,7 @@
 						<div class="single-table">
 							<div class="table-head">
 								<div class="icon">
-									<i class="icofont-blood"></i>
+									<i class="icofont-xray"></i>
 								</div>
 								<h4 class="title">X-Ray</h4>
 							</div>
@@ -460,10 +460,7 @@
 											<button type="submit" class="btn">Book An Appointment</button>
 										</div>
 									</div>
-								</div>
-								<div style="margin-left: 20px;" class="col-lg-7 col-md-8 col-12">
-									<p>( We will be confirm by an Text Message )</p>
-								</div>
+								</div>								
 							</div>
 						</div>
 						</form>
@@ -477,51 +474,54 @@
 			</div>
 		</section>
 		<section>
+			<div>
 			<div class="reviews-container">
 				<div class="reviews-header">
 					<h2>Excellent</h2>
 					<div class="stars">
 						★★★★★
 					</div>
-					<p>Based on <strong>2713 reviews</strong></p>
+					<p>Based on <strong>Customer Reviews</strong></p>
 					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
 				</div>
 				<div class="review-cards">
 					<div class="review-card">
 						<div class="reviewer">
-							<div class="avatar">S</div>
+							<div class="avatar">K</div>
 							<div class="name-date">
-								<p><strong>sathya nambi</strong></p>
-								<p>09/02/2024</p>
+								<p><strong>Kalaivanan S</strong></p>
+								<p>18/11/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
-						<p>Service is nice for ultrasound abdomen scan</p>
+						<p>Service is nice for ultrasound abdomen scan, I will refer others to this centre.</p>
 					</div>
 					<div class="review-card">
 						<div class="reviewer">
-							<div class="avatar">M</div>
+							<div class="avatar">D</div>
 							<div class="name-date">
-								<p><strong>Maha Jega</strong></p>
-								<p>09/02/2024</p>
+								<p><strong>Dheena Thayalan</strong></p>
+								<p>20/11/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
-						<p>MRI Cervical scan done and report given on time, nice experience</p>
+						<p>CT scan done and report given on time, nice experience.</p>
 					</div>
 					<div class="review-card">
 						<div class="reviewer">
-							<div class="avatar">J</div>
+							<div class="avatar">K</div>
 							<div class="name-date">
-								<p><strong>Joshua Josh</strong></p>
-								<p>07/02/2024</p>
+								<p><strong>Kaviyarasu</strong></p>
+								<p>25/11/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
-						<p>Fibro scan done staffs coordinated well very caring and friendly, I will refer others to this centre</p>
+						<p>Saami Scan staffs coordinated well very caring and friendly.</p>
 					</div>
+					
 				</div>
 			</div>
+		</div>
 		</section>
 		<footer id="footer" class="footer ">
 			<div class="footer-top">
