--- a/pricing.html
+++ b/pricing.html
@@ -116,7 +116,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont icofont-prescription"></i>
+							<i class="icofont icofont-icu"></i>
 						</div>
 						<h4 class="title">32 Slice CT Scan</h4>
 					</div>
@@ -136,7 +136,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont icofont-listening"></i>
+							<i class="icofont icofont-operation-theater"></i>
 						</div>
 						<h4 class="title">Ultrasound</h4>
 					</div>
@@ -156,7 +156,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont-blood"></i>
+							<i class="icofont icofont-xray"></i>
 						</div>
 						<h4 class="title">X-Ray</h4>
 					</div>
@@ -178,7 +178,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont icofont-prescription"></i>
+							<i class="icofont-stethoscope-alt"></i>
 						</div>
 						<h4 class="title">Fluoroscopy</h4>
 					</div>
@@ -198,7 +198,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont icofont-listening"></i>
+							<i class="icofont-thermometer-alt"></i>
 						</div>
 						<h4 class="title">Color Doppler</h4>
 					</div>
@@ -218,7 +218,7 @@
 				<div class="single-table">
 					<div class="table-head">
 						<div class="icon">
-							<i class="icofont-blood"></i>
+							<i class="icofont-surgeon"></i>
 						</div>
 						<h4 class="title">Essential Health Check</h4>
 					</div>
