--- a/contact.html
+++ b/contact.html
@@ -108,40 +108,94 @@
 					<div class="row"> 
 						<div class="col-lg-6">
 							<div class="contact-us-left">
-								<iframe class="p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.400080254793!2d78.3169144740584!3d10.023983390082627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00eb0012984dc9%3A0xfd86f6dabf58330a!2sSaami%20Scan%20Center!5e1!3m2!1sen!2sin!4v1731066123540!5m2!1sen!2sin" width="600" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+								<iframe class="p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.400080254793!2d78.3169144740584!3d10.023983390082627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00eb0012984dc9%3A0xfd86f6dabf58330a!2sSaami%20Scan%20Center!5e1!3m2!1sen!2sin!4v1731066123540!5m2!1sen!2sin" width="600" height="620px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="contact-us-form">
 								<h2>BOOK AN APPOINTMENT</h2>
 								<p>Please feel welcome to contact our friendly reception staff with any general or medical enquiry. Our doctors will receive or return any urgent calls. </p>
-								<form class="form" method="post" action="mail/mail.php">
+								<style>
+									.form-select
+									{
+										width:100% ;
+									}
+								</style>
+								<form class="form" id="appointmentForm">
 									<div class="row">
 										<div class="col-lg-6">
 											<div class="form-group">
-												<input type="text" name="name" placeholder="Name" required="">
+												<input type="text" id="name" name="name" placeholder="Name" required="">
 											</div>
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-												<input type="email" name="email" placeholder="Email" required="">
+												<!-- <select class="pt-1 form-select" id="gender" name="gender" required>
+													<option value="" disabled selected>Select Your Gender</option>
+													<option value="Morning Slot">Male</option>
+													<option value="Afternoon Slot">Female</option>
+													<option value="Evening Slot">Others</option>
+												</select> -->
+												<select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
+													<option value="" disabled selected>Treatment</option>
+													<option value="CT Scan">CT Scan</option>
+													<option value="X-Ray">X-Ray</option>
+													<option value="Ultrasound">Ultrasound</option>
+													<option value="Blood Tests">Blood Tests</option>
+													<option value="ECG Tests">ECG Tests</option>
+													<option value="Echocardiogram">Echocardiogram</option>
+													<option value="Labs">Labs</option>
+													<option value="Others">Others</option>
+												</select>
+												
 											</div>
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-												<input type="text" name="phone" placeholder="Phone" required="">
+												<input type="text" id="phone" name="phone" placeholder="Phone" required="">
 											</div>
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-												<input type="text" name="subject" placeholder="Subject" required="">
+												<input type="text" id="age" name="age" placeholder="Age" required="">
+											</div>
+										</div>
+										<div class="col-lg-6">
+											<div class="form-group">
+											<select class="pt-1 form-select"  id="slot" name="slot" required>
+												<option value="" disabled selected>Select a Time Slot</option>
+												<option value="Morning Slot">Morning Slot</option>
+												<option value="Afternoon Slot">Afternoon Slot</option>
+												<option value="Evening Slot">Evening Slot</option>
+											</select>
+											</div>
+										</div>
+										<div class="col-lg-6">
+											<div class="form-group">
+											<!-- <select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
+												<option value="" disabled selected>Treatment</option>
+												<option value="CT Scan">CT Scan</option>
+												<option value="X-Ray">X-Ray</option>
+												<option value="Ultrasound">Ultrasound</option>
+												<option value="Blood Tests">Blood Tests</option>
+												<option value="ECG Tests">ECG Tests</option>
+												<option value="Echocardiogram">Echocardiogram</option>
+												<option value="Labs">Labs</option>
+												<option value="Others">Others</option>
+											</select> -->
+											<select class="pt-1 form-select" id="gender" name="gender" required>
+													<option value="" disabled selected>Select Your Gender</option>
+													<option value="Morning Slot">Male</option>
+													<option value="Afternoon Slot">Female</option>
+													<option value="Evening Slot">Others</option>
+												</select>
 											</div>
 										</div>
 										<div class="col-lg-12">
 											<div class="form-group">
-												<textarea name="message" placeholder="Your Message" required=""></textarea>
+												<textarea id="description" name="description" placeholder="Enter Additional Details" required=""></textarea>
 											</div>
-										</div>
+										</div>										
 										<div class="col-12">
 											<div class="form-group login-btn">
 												<button class="btn" type="submit">Book an Appointment</button>
@@ -153,6 +207,8 @@
 						</div>
 					</div>
 				</div>
+
+				
 				<div class="contact-info">
 					<div class="row">
 						<div class="col-lg-4 col-12 ">
@@ -255,6 +311,41 @@
 			const currentYear = new Date().getFullYear();
 			yearSpan.textContent = currentYear;
 		</script>
+
+        <!-- ----------------------------------------------------- -->
+
+		<script>
+			document.getElementById("appointmentForm").addEventListener("submit", function (event) {
+				event.preventDefault();
+	
+				const name = document.getElementById("name").value;
+				const gender = document.getElementById("gender").value;
+				const phone = document.getElementById("phone").value;
+				const age = document.getElementById("age").value;
+				const slot = document.getElementById("slot").value;						
+				const treatment = document.getElementById("treatment").value;
+				const description = document.getElementById("description").value;
+	
+				const message = `
+	Hi, I would like to book an appointment at Saami Scans. Here are my details:
+
+	Name: ${name}
+	Gender: ${gender}
+	Phone: ${phone}
+	Age: ${age}
+	Preferred Slot: ${slot}
+	Treatment: ${treatment}
+	Description: ${description}
+				`.trim();
+	
+				const encodedMessage = encodeURIComponent(message);
+				const whatsappURL = `https://wa.me/+916380095718?text=${encodedMessage}`;
+				window.open(whatsappURL, "_blank");
+			});
+		</script>
+
+		<!-- ----------------------------------------------------- -->
+
         <script src="js/jquery.min.js"></script>
 		<script src="js/jquery-migrate-3.0.0.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
@@ -275,5 +366,6 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
+		
     </body>
 </html>
