--- a/index.html
+++ b/index.html
@@ -426,44 +426,6 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-12 col-12">
-						<!-- <form class="form" action="#">
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group">
-										<input type="text" name="name" placeholder="Name" required="">
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<input type="email" name="email" placeholder="Email" required="">
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<input type="text" name="phone" placeholder="Phone" required="">
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<input type="text" name="subject" placeholder="Subject" required="">
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="form-group">
-										<textarea name="message" placeholder="Your Message" required=""></textarea>
-									</div>
-								</div>
-							<div class="row">
-								<div class="col-lg-5 col-md-4 col-12">
-									<div class="form-group">
-										<div style="margin-left: 20px;" class="button">
-											<button type="submit" class="btn">Book An Appointment</button>
-										</div>
-									</div>
-								</div>								
-							</div>
-						</div>
-						</form> -->
 						<style>
 							.form-select
 							{
@@ -479,12 +441,6 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="form-group">
-										<!-- <select class="pt-1 form-select" id="gender" name="gender" required>
-											<option value="" disabled selected>Select Your Gender</option>
-											<option value="Morning Slot">Male</option>
-											<option value="Afternoon Slot">Female</option>
-											<option value="Evening Slot">Others</option>
-										</select> -->
 										<select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
 											<option value="" disabled selected>Treatment</option>
 											<option value="CT Scan">CT Scan</option>
@@ -521,22 +477,11 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="form-group">
-									<!-- <select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
-										<option value="" disabled selected>Treatment</option>
-										<option value="CT Scan">CT Scan</option>
-										<option value="X-Ray">X-Ray</option>
-										<option value="Ultrasound">Ultrasound</option>
-										<option value="Blood Tests">Blood Tests</option>
-										<option value="ECG Tests">ECG Tests</option>
-										<option value="Echocardiogram">Echocardiogram</option>
-										<option value="Labs">Labs</option>
-										<option value="Others">Others</option>
-									</select> -->
 									<select class="pt-1 form-select" id="gender" name="gender" required>
 											<option value="" disabled selected>Select Your Gender</option>
-											<option value="Morning Slot">Male</option>
-											<option value="Afternoon Slot">Female</option>
-											<option value="Evening Slot">Others</option>
+											<option value="Male">Male</option>
+											<option value="Female">Female</option>
+											<option value="Female">Others</option>
 										</select>
 									</div>
 								</div>
