--- a/contact.html
+++ b/contact.html
@@ -130,12 +130,6 @@
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-												<!-- <select class="pt-1 form-select" id="gender" name="gender" required>
-													<option value="" disabled selected>Select Your Gender</option>
-													<option value="Morning Slot">Male</option>
-													<option value="Afternoon Slot">Female</option>
-													<option value="Evening Slot">Others</option>
-												</select> -->
 												<select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
 													<option value="" disabled selected>Treatment</option>
 													<option value="CT Scan">CT Scan</option>
@@ -146,8 +140,7 @@
 													<option value="Echocardiogram">Echocardiogram</option>
 													<option value="Labs">Labs</option>
 													<option value="Others">Others</option>
-												</select>
-												
+												</select>												
 											</div>
 										</div>
 										<div class="col-lg-6">
@@ -172,22 +165,11 @@
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-											<!-- <select class="pt-1 form-select"  id="treatment" name="treatment" required style="z-index:-1;max-height: 350px; overflow: scroll;">
-												<option value="" disabled selected>Treatment</option>
-												<option value="CT Scan">CT Scan</option>
-												<option value="X-Ray">X-Ray</option>
-												<option value="Ultrasound">Ultrasound</option>
-												<option value="Blood Tests">Blood Tests</option>
-												<option value="ECG Tests">ECG Tests</option>
-												<option value="Echocardiogram">Echocardiogram</option>
-												<option value="Labs">Labs</option>
-												<option value="Others">Others</option>
-											</select> -->
 											<select class="pt-1 form-select" id="gender" name="gender" required>
 													<option value="" disabled selected>Select Your Gender</option>
-													<option value="Morning Slot">Male</option>
-													<option value="Afternoon Slot">Female</option>
-													<option value="Evening Slot">Others</option>
+													<option value="Male">Male</option>
+													<option value="Female">Female</option>
+													<option value="Others">Others</option>
 												</select>
 											</div>
 										</div>
