--- a/about.html
+++ b/about.html
@@ -185,35 +185,35 @@
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-listening"></i>
+							<i class="icofont icofont-icu"></i>
 							<h4><a href="gallery.html">CT Scan</a></h4>
 							<p>Computed Tomography (CT) can be used to help diagnose, and plan the treatment, for a range of medical conditions. </p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-heart-alt"></i>
+							<i class="icofont icofont-operation-theater"></i>
 							<h4><a href="gallery.html">Ultra Sound</a></h4>
 							<p>Ultrasound scanning involves exposing part of the body to high-frequency sound waves to produce pictures of the inside of the body.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-heart-beat"></i>
+							<i class="icofont icofont-nurse"></i>
 							<h4><a href="gallery.html">Color Doppler</a></h4>
 							<p>It is a medical imaging technique which is used to provide visualization of the bloodflow can clearly see what is happening inside.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-eye-alt"></i>
+							<i class="icofont icofont-xray"></i>
 							<h4><a href="gallery.html">X-Ray</a></h4>
 							<p>An X-ray picture is really a picture of the shadows cast by the denser materials (like bones) in your body.</p>	
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-service">
-							<i class="icofont icofont-blood"></i>
+							<i class="icofont icofont-dna-alt-2"></i>
 							<h4><a href="gallery.html">Lab Services</a></h4>
 							<p>Outpatient surgery may occur in an inpatient facility, in a self-contained unit within a hospital, in a freestanding self-contained unit.</p>	
 						</div>
