--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<div class="single-schedule middle">
 								<div class="inner">
 									<div class="icon">
-										<i class="icofont-prescription"></i>
+										<i class="icofont-doctor"></i>
 									</div>
 									<div class="single-content">
 										<span>Our Promise</span>
