--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 								</div>
 								<div class="col-lg-12">
 									<div class="form-group">
-										<textarea id="description" name="description" placeholder="Enter Additional Details" required=""></textarea>
+										<textarea id="description" name="description" placeholder="Enter Additional Details"></textarea>
 									</div>
 								</div>										
 								<div class="col-12">
