--- a/echocardiogram.html
+++ b/echocardiogram.html
@@ -175,6 +175,7 @@
 									<li><a href="https://www.instagram.com/saamiscan/" target="_blank"><i class="icofont-instagram"></i></a></li>
 									<li><a href="https://x.com/SaamiScan?t=cIU6cidooQmoQbJm5vcLlA&s=08" target="_blank"><i class="icofont-twitter"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/saamiscan/" target="_blank"><i class="icofont-linkedin"></i></a></li>
+									<li><a href="https://wa.me/+919514700761" target="_blank"><i class="icofont-whatsapp"></i></a></li>
 								</ul>
 							</div>
 						</div>
