--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
         <meta name="keywords" content="Best Diagnostic center in Melur, MRI SCAN, scan center near me, Full body MRI scan, MRI scan in Melur, Best MRI scan in Melur, MRI test in Melur, Low cost MRI scan in Melur, CT SCAN, CT scan  near me, CT scan in Chennai, Best CT scan in Melur, CT test in Melur, Low cost CT scan in Melur, CT Chest Scan in Melur, hsg scan in Melur, 4d pregnancy scan in Melur ">
         <title>Saami Scan Center | Best Scan Centre Melur</title>
         <link rel="icon" href="img/icon.png">
+		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/nice-select.css">
@@ -166,6 +167,56 @@
 				  </div>
 			</div>
 		</section>
+		<section>
+			<div>
+			<div class="reviews-container">
+				<div class="reviews-header">
+					<h2>Excellent</h2>
+					<div class="stars">
+						★★★★★
+					</div>
+					<p>Based on <strong>Customer Reviews</strong></p>
+					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
+				</div>
+				<div class="review-cards">
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">K</div>
+							<div class="name-date">
+								<p><strong>Kalaivanan</strong></p>
+								<p>18/11/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>Service is nice for ultrasound abdomen scan, I will refer others to this centre.</p>
+					</div>
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">D</div>
+							<div class="name-date">
+								<p><strong>Dheena Thayalan</strong></p>
+								<p>20/11/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>CT scan done and report given on time, nice experience.</p>
+					</div>
+					<div class="review-card">
+						<div class="reviewer">
+							<div class="avatar">K</div>
+							<div class="name-date">
+								<p><strong>Kaviyarasu</strong></p>
+								<p>25/11/2024</p>
+							</div>
+						</div>
+						<p class="stars">★★★★★</p>
+						<p>Saami Scan staffs coordinated well very caring and friendly.</p>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		</section>
 		<section class="services section">
 			<div class="container">
 				<div class="row">
@@ -220,7 +271,7 @@
 					</div>
 				</div>
 			</div>
-		</section>		
+		</section>	
         <footer id="footer" class="footer ">
 			<div class="footer-top">
 				<div class="container">
