--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		
+		</section>		
 		<div class="schedule">
 			<div class="container">
 				<div class="schedule-inner">
@@ -522,7 +521,7 @@
 						<div class="reviewer">
 							<div class="avatar">K</div>
 							<div class="name-date">
-								<p><strong>Kalaivanan S</strong></p>
+								<p><strong>Kalaivanan</strong></p>
 								<p>18/11/2024</p>
 							</div>
 						</div>
