timing shift updation

--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
 									<div class="form-group">
 									<select class="pt-1 form-select"  id="slot" name="slot" required>
 										<option value="" disabled selected>Select a Time Slot</option>
-										<option value="Morning Slot">Morning Slot</option>
-										<option value="Afternoon Slot">Afternoon Slot</option>
-										<option value="Evening Slot">Evening Slot</option>
+										<option value="Morning Slot">Morning</option>
+										<option value="Afternoon Slot">Afternoon</option>
+										<option value="Evening Slot">Evening</option>
 									</select>
 									</div>
 								</div>
