--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
 							<div class="single-info">
 								<i class="icofont-google-map"></i>
 								<div class="content">
-									<p>2/501, Madurai NH Junction,, Sorakkundu</p>	
+									<p>2/501, Melur to Madurai NH Junction, Sorakkundu</p>	
 									<p>Village, Melur, Madurai.</p>									
 								</div>
 							</div>
@@ -266,7 +266,7 @@
 											<li class="day">Sunday <span>8.00am - 6.00pm</span></li>		
 								</ul>
 								<br>
-								<p>2/501, Madurai NH Junction, Sorakkundu Village, Melur, Tamil Nadu 625106.</p>
+								<p>2/501, Melur to Madurai NH Junction, Sorakkundu Village, Melur, Madurai, Tamil Nadu 625106.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-12">
