--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 							<div class="avatar">K</div>
 							<div class="name-date">
 								<p><strong>Kalaivanan</strong></p>
-								<p>18/11/2024</p>
+								<p>01/12/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
@@ -532,23 +532,23 @@
 						<div class="reviewer">
 							<div class="avatar">D</div>
 							<div class="name-date">
-								<p><strong>Dheena Thayalan</strong></p>
-								<p>20/11/2024</p>
+								<p><strong>Nandha Kishore</strong></p>
+								<p>02/12/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
-						<p>CT scan done and report given on time, nice experience.</p>
+						<p>Saami Scan staffs coordinated well very caring and friendly.</p>
 					</div>
 					<div class="review-card">
 						<div class="reviewer">
 							<div class="avatar">K</div>
 							<div class="name-date">
-								<p><strong>Kaviyarasu</strong></p>
-								<p>25/11/2024</p>
+								<p><strong>Nizar Ahamed</strong></p>
+								<p>03/12/2024</p>
 							</div>
 						</div>
 						<p class="stars">★★★★★</p>
-						<p>Saami Scan staffs coordinated well very caring and friendly.</p>
+						<p>CT scan done and report given on time, nice experience.</p>
 					</div>
 					
 				</div>
