--- a/about.html
+++ b/about.html
@@ -169,52 +169,52 @@
 		</section>
 		<section>
 			<div>
-			<div class="reviews-container">
-				<div class="reviews-header">
-					<h2>Excellent</h2>
-					<div class="stars">
-						★★★★★
+				<div class="reviews-container">
+					<div class="reviews-header">
+						<h2>Excellent</h2>
+						<div class="stars">
+							★★★★★
+						</div>
+						<p>Based on <strong>Customer Reviews</strong></p>
+						<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
 					</div>
-					<p>Based on <strong>Customer Reviews</strong></p>
-					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Google-favicon-2015.png" alt="Google" class="google-logo">
+					<div class="review-cards">
+						<div class="review-card">
+							<div class="reviewer">
+								<div class="avatar">K</div>
+								<div class="name-date">
+									<p><strong>Kalaivanan</strong></p>
+									<p>01/12/2024</p>
+								</div>
+							</div>
+							<p class="stars">★★★★★</p>
+							<p>Service is nice for ultrasound abdomen scan, I will refer others to this centre.</p>
+						</div>
+						<div class="review-card">
+							<div class="reviewer">
+								<div class="avatar">D</div>
+								<div class="name-date">
+									<p><strong>Nandha Kishore</strong></p>
+									<p>02/12/2024</p>
+								</div>
+							</div>
+							<p class="stars">★★★★★</p>
+							<p>Saami Scan staffs coordinated well very caring and friendly.</p>
+						</div>
+						<div class="review-card">
+							<div class="reviewer">
+								<div class="avatar">K</div>
+								<div class="name-date">
+									<p><strong>Nizar Ahamed</strong></p>
+									<p>03/12/2024</p>
+								</div>
+							</div>
+							<p class="stars">★★★★★</p>
+							<p>CT scan done and report given on time, nice experience.</p>
+						</div>
+						
+					</div>
 				</div>
-				<div class="review-cards">
-					<div class="review-card">
-						<div class="reviewer">
-							<div class="avatar">K</div>
-							<div class="name-date">
-								<p><strong>Kalaivanan</strong></p>
-								<p>18/11/2024</p>
-							</div>
-						</div>
-						<p class="stars">★★★★★</p>
-						<p>Service is nice for ultrasound abdomen scan, I will refer others to this centre.</p>
-					</div>
-					<div class="review-card">
-						<div class="reviewer">
-							<div class="avatar">D</div>
-							<div class="name-date">
-								<p><strong>Dheena Thayalan</strong></p>
-								<p>20/11/2024</p>
-							</div>
-						</div>
-						<p class="stars">★★★★★</p>
-						<p>CT scan done and report given on time, nice experience.</p>
-					</div>
-					<div class="review-card">
-						<div class="reviewer">
-							<div class="avatar">K</div>
-							<div class="name-date">
-								<p><strong>Kaviyarasu</strong></p>
-								<p>25/11/2024</p>
-							</div>
-						</div>
-						<p class="stars">★★★★★</p>
-						<p>Saami Scan staffs coordinated well very caring and friendly.</p>
-					</div>
-					
-				</div>
-			</div>
 		</div>
 		</section>
 		<section class="services section">
