--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 					</div>
 					<div class="review-card">
 						<div class="reviewer">
-							<div class="avatar">D</div>
+							<div class="avatar">N</div>
 							<div class="name-date">
 								<p><strong>Nandha Kishore</strong></p>
 								<p>02/12/2024</p>
@@ -541,7 +541,7 @@
 					</div>
 					<div class="review-card">
 						<div class="reviewer">
-							<div class="avatar">K</div>
+							<div class="avatar">N</div>
 							<div class="name-date">
 								<p><strong>Nizar Ahamed</strong></p>
 								<p>03/12/2024</p>
